# task-tracker

./: .env_example  .gitignore  README.md  c4_containers_diagram.puml  c4_context_diagram.puml  compose.yaml  er_diagram.puml
tasks_database/: 1-pg-shortkey.sql  2-setup.sql
tasks_service/: Dockerfile  Makefile  go.mod  go.sum
tasks_service/api/: tasks_service.proto
tasks_service/cmd/tasks_service/: tasks_service.go
tasks_service/internal/proto/: tasks_service.pb.go  tasks_service_grpc.pb.go
user_database/: setup.sql
user_service/: Cargo.toml  Dockerfile  README.md  build.rs  log  openapi-spec.yaml  openapi.yaml
user_service/src/: auth.rs  common.rs  main.rs  tasks.rs
user_service/src/proto/: tasks_service.rs
