[package]
name = "user_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
bcrypt = "0.15.1"
chrono = "0.4.35"
clap = { version = "4.5.2", features = ["derive"] }
const-hex = "1.11.3"
env_logger = "0.11.3"
jwt-simple = "0.12.9"
log = "0.4.21"
postgres = { version = "0.19.7", features = ["with-chrono-0_4"] }
postgres-protocol = "0.6.6"
retry = "2.0.0"
serde = { version = "1.0.197", features = ["std", "derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tokio-postgres = "0.7.10"

[build-dependencies]
tonic-build = "0.11"